userinput von controller zu view ausgelagert